--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.1.5",
     "@mui/system": "^7.1.0",
     "@mui/x-data-grid": "^7.27.3",
+    "@mui/x-date-pickers": "^8.18.0",
     "@react-google-maps/api": "^2.20.7",
     "@react-oauth/google": "^0.12.2",
     "@tinymce/tinymce-react": "^6.2.1",
@@ -27,6 +28,7 @@
     "chart.js": "^4.4.8",
     "chartjs-plugin-datalabels": "^2.2.0",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.19",
     "firebase": "^10.12.0",
     "framer-motion": "^12.16.0",
     "google-map-react": "^2.2.5",
