--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-apple-login": "^1.1.6",
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-firebase-hooks": "^5.1.1",
