--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" },
+    {
+      "source": "/sitemap.xml",
+      "destination": "https://dev.zeezoo.mobi:8084/sitemap.xml"
+    },
+    {
+      "source": "/robots.txt",
+      "destination": "https://dev.zeezoo.mobi:8084/robots.txt"
+    }
+  ]
 }
