add config vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" },
     {
       "source": "/sitemap.xml",
       "destination": "https://dev.zeezoo.mobi:8084/sitemap.xml"
@@ -8,6 +7,7 @@
     {
       "source": "/robots.txt",
       "destination": "https://dev.zeezoo.mobi:8084/robots.txt"
-    }
+    },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
